- resolve #56 issue - remove linhas horizontais brancas do dark mode para ficar mais parecido com o twitter real

--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ body {
   height: 49px;
   overflow: hidden;
   border-radius: 50%;
+  background-size: cover;
+  background-position: center;
 }
 .header-image > img {
   width: 100%;
@@ -212,6 +214,9 @@ body {
   padding: 15px 0;
   border-top: 1px solid var(--color-grey);
   border-bottom: 1px solid var(--color-grey);
+}
+.dark-mode  .tweet-analytics {
+  border: none;
 }
 .tweet-analytics span:last-child {
   margin-left: 15px;
